# poc_embedding_query_engine

./: LICENSE  README.md  environment.yml  pyproject.toml
config/: example.runtime.env
poc_embedding_query_engin/: README.md
poc_embedding_query_engin/config/: refiner_prompt.txt
poc_embedding_query_engin/docs/: query_engine_walkthrough.md
poc_embedding_query_engin/scripts/: run_query.py
poc_embedding_query_engin/sql/: 001_create_schema.sql
poc_embedding_query_engin/src/intake/: chunker.py  embedder.py  maintenance.py  refiner.py
poc_embedding_query_engin/src/query/: content_query.py
poc_embedding_query_engin/src/tools/: search_pages.py
poc_embedding_query_engin/tests/: test_query_engine_planner.py
poc_embedding_query_engin/tests/fixtures/: embeddings_sample.npy
poc_embedding_query_engin/tests/fixtures/chunks/: page_0001_chunk_00.txt  (+4 more)
poc_embedding_query_engine/: CHANGELOG.md  example.gitignore
poc_embedding_query_engine/config/: manual_test_prompt.txt  planner_prompt.txt
poc_embedding_query_engine/scripts/: run_env_linux.sh  run_intake_and_query.py
poc_embedding_query_engine/src/engine/: inference_worker.py  planner_parser.py  query_engine.py
poc_embedding_query_engine/src/tools/: render_latest_query_run.py  semantic_search.py
poc_embedding_query_engine/tests/fixtures/: chunks_meta_sample.jsonl
sql/: db_objects_to_chunking.sql
src/engine/: trace_writer.py
src/intake/: pdf_loader.py
tests/: test_content_query.py
tests/fixtures/: trace_sample.jsonl
tests/fixtures/chunks/: page_0002_chunk_00.txt  page_0003_chunk_00.txt
(+5 files in other folders)
